envio final test

--- a/ms_main/public/index.html
+++ b/ms_main/public/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title> Monitor de promedios </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Monitoreo promedio visitas a XXX</h1>
+  <h1>Monitoreo promedios</h1>
   <span id="mOnline" name="mOnline" class="text-danger">No conectado</span> 
 </div>
   
